@@ -1,5 +1,13 @@
 2023-02-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* libpoke/pkl-asm.c (pkl_asm_insn_atoa): Do not use `PVM_NULL' as
+	the bounder in the type of array.  Use a closure that returns
+	`PVM_NULL'.
+	* testsuite/poke.pkl/cast-array-8.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
+2023-02-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/pvm.jitter (wrapped-globals): Remove
 	`pvm_literal_inval_obase'.
 	(late-c): Likewise.
